# calculator_pkg_ex

./: CMakeLists.txt  README.md  calculator.py  pyproject.toml  tox.ini
calculator_pkg_ex/file_calculator/: file_calculator.py
scripts/: build_file.py  run.py  sum_file.py
src/calculator_pkg_ex/: __init__.py
src/calculator_pkg_ex/file_calculator/: file_calculator.py
src/calculator_pkg_ex/tests/: test_file_calculator.py
src/cpp/: main.cpp
src/cpp/include/: CPPFileCalculator.h  Calculator.h
src/cpp/src/: CPPFileCalculator.cpp  Calculator.cpp
